# Cargo.toml
[package]
name = "todoctl"
version = "0.3.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENCE"
]
homepage = "https://github.com/MikeTeddyOmondi/todoctl"
description = "Simple command line utility application for managing your tasks"
repository = "https://github.com/MikeTeddyOmondi/todoctl"
keywords = ["cli", "task_application", "todo_application"]
categories = ["command-line-interface"]
license = "MIT"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
clap = { version = "4.5.37", features = ["derive"] }
prettytable-rs = "0.10.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
uuid = { version = "1.16", features = ["v4", "fast-rng", "macro-diagnostics"] }
dirs = "6.0.0"